# fastapi_playground

./: .gitignore  Pipfile  pyproject.toml
deploy/docker/: .env-examples  README.md  docker-compose.yml
src/: main.py
src/db/entities/: user.py
src/db/repositories/: repository.py  user_repository.py
src/templates/: base.html  index.html  navbar.html  users.html
src/templates/components/: navbar.html
src/templates/forms/: registration.html
